# self-tune

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  config.yaml.template  install.sh  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
cli/: pyproject.toml
cli/echo_smith/: __init__.py  cli.py  export.py  models.py  store.py
cli/self_tune/: __init__.py  cli.py  export.py  models.py  store.py
docs/: brainstorming-log.md
docs/superpowers/plans/: 2026-04-10-echo-smith-p0.md  2026-04-10-self-tune-p0.md
docs/superpowers/specs/: 2026-04-10-echo-smith-design.md  2026-04-10-self-tune-design.md
skills/echo-smith/: SKILL.md  correction-prompt.md  output-schema.md  retrospective-prompt.md  sidecar-prompt.md
skills/reflect/: SKILL.md  correction-prompt.md  output-schema.md  retrospective-prompt.md  sidecar-prompt.md
skills/self-tune/: SKILL.md  correction-prompt.md  output-schema.md  retrospective-prompt.md  sidecar-prompt.md
tests/: test_cli.py  test_export.py  test_models.py  test_store.py
tests/fixtures/: sample_correction.json  sample_insight.json  sample_reminder.json  sample_sft.json  sample_trace.json
